# cpp-notebook-language-server

./: .dir-locals.el  CHANGELOG.md  README.md  cpp-notebook-language-server.cabal  flake.nix  package.yaml  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs  Test.hs
cling-parser/: CMakeLists.txt
cling-parser/src/: main.cpp
cling-parser/test/: run_golden_tests.py
cling-parser/test/golden/inputs/: multi.in
cling-parser/test/golden/outputs/: multi.json
nix/overlays/: hix-project.nix
src/Language/LSP/: Notebook.hs  Test.hs  TransformTest.hs  Transformer.hs
src/Language/LSP/Notebook/: CppParser.hs  DeclarationSifter.hs  ExecutableWrapper.hs  HeadTailTransformer.hs  ImportSifter.hs  StripDirective.hs
src/Transform/: ClientNot.hs  ClientReq.hs  Common.hs  Util.hs
src/Transform/ServerRsp/: Hover.hs
test/: .dir-locals.el  Main.hs
test/Test/: Completions.hs  Diagnostics.hs  DocumentReferences.hs  DocumentSymbols.hs  Hover.hs  Pipeline.hs
test/Test/LSP/: Completions.hs  DocumentSymbols.hs  Hover.hs
test/Test/Transformer/: DeclarationSifter.hs  DeclarationSifter2.hs  Example1.hs  Example2.hs  Example3.hs  Example4.hs  ExecutableWrapper.hs  HeadTail.hs  Pipeline.hs  StripDirective.hs
test/TestLib/: Core.hs  Generators.hs  LSP.hs  Util.hs
